--- a/compartments/layouts/application.html
+++ b/compartments/layouts/application.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Airship CMS Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Lato" rel="stylesheet">
   <link rel="stylesheet" href="/assets/styles/styles.css">
 </head>
 <body>
