--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -47,10 +47,92 @@ table {
 }
 
 /* Default Styles */
+:root {
+  font-size: 100%;
+}
+
 body {
   font-family: 'Lato', sans-serif;
+  font-size: 1rem;
+  color: #333;
+  letter-spacing: 1px;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Crimson Text', serif;
+}
+
+p {
+  font-size: 0.5em;
+}
+
+.contain {
+  margin: 0 auto;
+  width: 1100px;
+}
+
+.section {
+  padding: 1.5rem 0;
+}
+
+.main-header {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+
+  &__text {
+    font-size: 2em;
+  }
+
+  &__information {
+    font-size: 0.65em;
+    text-decoration: underline;
+    // border-bottom: 1px solid #333;
+  }
+
+  &__address {
+    font-size: 0.5em;
+    margin-bottom: 0.5em;
+  }
+}
+
+.image-banner {
+  height: 400px;
+  width: 100%;
+
+  background: url('https://ducsbistro.com/Ducsbistro/Welcome_files/IMG_4916.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.restaurant-hours {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 1.5rem;
+
+  &__title {
+    // margin: 2em 0;
+    font-size: 1.5em;
+  }
+
+  &__days {
+    text-decoration: underline;
+    font-size: 1.2em;
+    padding: 1em 0;
+  }
+
+  &__service {
+    font-size: 1em;
+    padding: 0.5em 0;
+  }
+
+  &__hours {
+    margin-bottom: 1.2em;
+  }
 }
