🎉 welcome menu and root pages

--- a/compartments/layouts/application.html
+++ b/compartments/layouts/application.html
@@ -8,6 +8,23 @@
   <link rel="stylesheet" href="/assets/styles/styles.css">
 </head>
 <body>
+  <header class="main-header contain section">
+    <h1 class="main-header__text">Duc’s Bistro</h1>
+
+    <p class="main-header__information section">Traditional Vietnamese and Classic French Cuisine • Serving Chinatown Since 1992</p>
+
+    <address class="main-header__address">1188 Maunakea Street Honolulu, Hawaii 96817</address>
+    <p>For reservations please call (808) 531-6325</p>
+  </header>
+
+  <nav class="section">
+    <ul class="navigation">
+      <li class="navigation__item"><a href="/">Home</a></li>
+      <li class="navigation__item"><a href="/#hours">Hours</a></li>
+      <li class="navigation__item"><a href="/menu/view/main-menu">Menu</a></li>
+      <li class="navigation__item"><a href="#wine-list">Wine List</a></li>
+    </ul>
+  </nav>
   {{{ template }}}
 </body>
 </html>
