--- a/compartments/templates/root.html
+++ b/compartments/templates/root.html
@@ -1,13 +1,8 @@
-<header class="main-header contain section">
-  <h1 class="main-header__text">Duc’s Bistro</h1>
-  <p class="main-header__information section">Traditional Vietnamese and Classic French Cuisine • Serving Chinatown Since 1992</p>
-  <address class="main-header__address">1188 Maunakea Street Honolulu, Hawaii 96817</address>
-  <p>📞 (808) 531-6325</p>
-</header>
 <section class="section">
   <div class="image-banner"></div>
 </section>
-<section class="restaurant-hours section">
+
+<section id="hours" class="restaurant-hours section">
   <h2 class="restaurant-hours__title">Restaurant Hours</h2>
 
   <div class="section">
@@ -20,7 +15,7 @@
 
   <div class="section">
     <h3 class="restaurant-hours__days">Saturday - Sunday</h3>
-    <h4 class="restaurant-hours__service">Dinner</h4>
+    <h4 class="restaurant-hours__service">Dinner only</h4>
     <h4 class="restaurant-hours__hours">5:00 p.m. - 9:00 p.m.</h4>
   </div>
 </section>
