--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -69,6 +69,10 @@ p {
 .contain {
   margin: 0 auto;
   width: 1100px;
+
+  &__section {
+    width: 800px;
+  }
 }
 
 .section {
@@ -87,14 +91,37 @@ p {
   }
 
   &__information {
+    margin-bottom: 2em;
     font-size: 0.65em;
-    text-decoration: underline;
-    // border-bottom: 1px solid #333;
   }
 
   &__address {
-    font-size: 0.5em;
+    font-size: 0.60em;
     margin-bottom: 0.5em;
+  }
+}
+
+.navigation {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+
+  margin: 0 auto;
+  width: 600px;
+  padding: 2em 0;
+
+  font-family: 'Lato', sans-serif;
+
+  &__item {
+    padding: 1em;
+    background: #ddd;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+
+    a {
+      // text-decoration: none;
+      color: #333;
+    }
   }
 }
 
@@ -112,19 +139,18 @@ p {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   text-align: center;
   font-size: 1.5rem;
 
   &__title {
-    // margin: 2em 0;
     font-size: 1.5em;
   }
 
   &__days {
     text-decoration: underline;
     font-size: 1.2em;
-    padding: 1em 0;
+    padding: 1.5em 0;
   }
 
   &__service {
@@ -133,6 +159,44 @@ p {
   }
 
   &__hours {
-    margin-bottom: 1.2em;
+    margin-bottom: 1.5em;
+  }
+}
+
+.menu {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 2rem;
+
+  &__title {
+    font-size: 1.5em;
+  }
+
+  &__course {
+    header {
+      text-align: center;
+      h3 {
+        text-decoration: underline;
+        padding: 0.5em 0;
+      }
+    }
+
+    &__item {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-between;
+      padding: 1em 0;
+
+      &__name {
+        flex: 0 0 80%;
+        padding: 0.5em 0;
+      }
+
+      &__desc {
+        // flex: 0 1 60%;
+      }
+    }
   }
 }
