🚧 stubs wine list page

--- a/compartments/layouts/application.html
+++ b/compartments/layouts/application.html
@@ -22,7 +22,8 @@
       <li class="navigation__item"><a href="/">Home</a></li>
       <li class="navigation__item"><a href="/#hours">Hours</a></li>
       <li class="navigation__item"><a href="/menu/view/main-menu">Menu</a></li>
-      <li class="navigation__item"><a href="#wine-list">Wine List</a></li>
+      <li class="navigation__item"><a href="/wine-lists/view/
+wine">Wine List</a></li>
     </ul>
   </nav>
   {{{ template }}}
