💅 layouts now a pug template; fixes some styles

--- a/compartments/templates/menu/show.html
+++ b/compartments/templates/menu/show.html
@@ -2,7 +2,7 @@
 <div class="menu section contain contain__section" id="menu">
   <h2 class="menu__title">{{fields.type}}</h2>
   <article class="menu__course section">
-    <header class="menu__course section">
+    <header class="menu__title section">
       <h3>Appetizers</h3>
       <p>Served Family Style</p>
     </header>
@@ -15,7 +15,7 @@
     </ul>
   </article>
   <article class="menu__course section">
-    <header class="menu__course section">
+    <header class="menu__title section">
       <h3>Soup and Salad</h3>
     </header>
     <ul class="menu__course__list section">{{#each related_items.soup_and_salad}}
@@ -27,7 +27,7 @@
     </ul>
   </article>
   <article class="menu__course section">
-    <header class="menu__course section">
+    <header class="menu__title section">
       <h3>Vegetables</h3>
       <p>Served Family Style</p>
     </header>
@@ -40,7 +40,7 @@
     </ul>
   </article>
   <article class="menu__course section">
-    <header class="menu__course section">
+    <header class="menu__title section">
       <h3>Seafood</h3>
       <p>Served Family Style</p>
     </header>
@@ -53,7 +53,7 @@
     </ul>
   </article>
   <article class="menu__course section">
-    <header class="menu__course section">
+    <header class="menu__title section">
       <h3>Poultry</h3>
       <p>Served Family Style</p>
     </header>
@@ -66,7 +66,7 @@
     </ul>
   </article>
   <article class="menu__course section">
-    <header class="menu__course section">
+    <header class="menu__title section">
       <h3>Meat</h3>
       <p>Served Family Style</p>
     </header>
@@ -79,7 +79,7 @@
     </ul>
   </article>
   <article class="menu__course section">
-    <header class="menu__course section">
+    <header class="menu__title section">
       <h3>Starches</h3>
     </header>
     <ul class="menu__course__list section">{{#each related_items.starches}}
