--- a/compartments/templates/wine_lists/show.html
+++ b/compartments/templates/wine_lists/show.html
@@ -2,7 +2,7 @@
 <div class="wine section contain contain__section" id="wine">
   <h2 class="wine__title">{{fields.type}}</h2>
   <article class="wine__list section">
-    <header class="wine__list section">
+    <header class="wine__title section">
       <h3>Champagne & Sparkling Wine</h3>
     </header>
     <ul class="section">{{#each related_items.champagne_sparkling_wine}}
@@ -13,7 +13,7 @@
     </ul>
   </article>
   <article class="wine__list section">
-    <header class="wine__list section">
+    <header class="wine__title section">
       <h3>Chardonnay</h3>
     </header>
     <ul class="section">{{#each related_items.chardonnay}}
@@ -24,7 +24,7 @@
     </ul>
   </article>
   <article class="wine__list section">
-    <header class="wine__list section">
+    <header class="wine__title section">
       <h3>Sauvignon Blanc</h3>
     </header>
     <ul class="section">{{#each related_items.sauvignon_blanc}}
@@ -35,7 +35,7 @@
     </ul>
   </article>
   <article class="wine__list section">
-    <header class="wine__list section">
+    <header class="wine__title section">
       <h3>Riesling</h3>
     </header>
     <ul class="section">{{#each related_items.riesling}}
@@ -46,7 +46,7 @@
     </ul>
   </article>
   <article class="wine__list section">
-    <header class="wine__list section">
+    <header class="wine__title section">
       <h3>Light White</h3>
     </header>
     <ul class="section">{{#each related_items.light_white}}
@@ -57,7 +57,7 @@
     </ul>
   </article>
   <article class="wine__list section">
-    <header class="wine__list section">
+    <header class="wine__title section">
       <h3>Sweet Wine</h3>
     </header>
     <ul class="section">{{#each related_items.sweet_wine}}
@@ -68,7 +68,7 @@
     </ul>
   </article>
   <article class="wine__list section">
-    <header class="wine__list section">
+    <header class="wine__title section">
       <h3>Sake</h3>
     </header>
     <ul class="section">{{#each related_items.sake}}
@@ -79,7 +79,7 @@
     </ul>
   </article>
   <article class="wine__list section">
-    <header class="wine__list section">
+    <header class="wine__title section">
       <h3>Cabernet Sauvignon</h3>
     </header>
     <ul class="section">{{#each related_items.cabernet_sauvignon}}
@@ -90,7 +90,7 @@
     </ul>
   </article>
   <article class="wine__list section">
-    <header class="wine__list section">
+    <header class="wine__title section">
       <h3>Pinot Noir</h3>
     </header>
     <ul class="section">{{#each related_items.pinot_noir}}
@@ -101,7 +101,7 @@
     </ul>
   </article>
   <article class="wine__list section">
-    <header class="wine__list section">
+    <header class="wine__title section">
       <h3>Merlot</h3>
     </header>
     <ul class="section">{{#each related_items.merlot}}
@@ -112,7 +112,7 @@
     </ul>
   </article>
   <article class="wine__list section">
-    <header class="wine__list section">
+    <header class="wine__title section">
       <h3>Zinfadel</h3>
     </header>
     <ul class="section">{{#each related_items.zinfadel}}
@@ -123,7 +123,7 @@
     </ul>
   </article>
   <article class="wine__list section">
-    <header class="wine__list section">
+    <header class="wine__title section">
       <h3>Blends and Other Reds</h3>
     </header>
     <ul class="section">{{#each related_items.blend_other_reds}}
@@ -134,7 +134,7 @@
     </ul>
   </article>
   <article class="wine__list section">
-    <header class="wine__list section">
+    <header class="wine__title section">
       <h3>Fuller Red</h3>
     </header>
     <ul class="section">{{#each related_items.fuller_red}}
