--- a/src/compartments/templates/menu/show.pug
+++ b/src/compartments/templates/menu/show.pug
@@ -1,7 +1,7 @@
 #menu.menu.section.contain.contain__section
   h2.menu__title {{fields.type}}
   article.menu__course.section
-    header.menu__course.section
+    header.menu__title.section
       h3 Appetizers
       p Served Family Style
     ul.menu__course__list.section
@@ -13,7 +13,7 @@
       | {{/each}}
 
   article.menu__course.section
-    header.menu__course.section
+    header.menu__title.section
       h3 Soup and Salad
     ul.menu__course__list.section
       | {{#each related_items.soup_and_salad}}
@@ -24,7 +24,7 @@
       | {{/each}}
 
   article.menu__course.section
-    header.menu__course.section
+    header.menu__title.section
       h3 Vegetables
       p Served Family Style
     ul.menu__course__list.section
@@ -36,7 +36,7 @@
       | {{/each}}
 
   article.menu__course.section
-    header.menu__course.section
+    header.menu__title.section
       h3 Seafood
       p Served Family Style
     ul.menu__course__list.section
@@ -48,7 +48,7 @@
       | {{/each}}
 
   article.menu__course.section
-    header.menu__course.section
+    header.menu__title.section
       h3 Poultry
       p Served Family Style
     ul.menu__course__list.section
@@ -60,7 +60,7 @@
       | {{/each}}
 
   article.menu__course.section
-    header.menu__course.section
+    header.menu__title.section
       h3 Meat
       p Served Family Style
     ul.menu__course__list.section
@@ -72,7 +72,7 @@
       | {{/each}}
 
   article.menu__course.section
-    header.menu__course.section
+    header.menu__title.section
       h3 Starches
     ul.menu__course__list.section
       | {{#each related_items.starches}}
