--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -112,16 +112,15 @@ p {
 
   font-family: 'Lato', sans-serif;
 
+  & :any-link {
+    color: #333;
+  }
+
   &__item {
     padding: 1em;
     background: #ddd;
     border: 1px solid #ddd;
     border-radius: 3px;
-
-    a {
-      // text-decoration: none;
-      color: #333;
-    }
   }
 }
 
@@ -171,18 +170,15 @@ p {
   font-size: 2rem;
 
   &__title {
-    font-size: 1.5em;
+    font-size: 1.25em;
+    text-align: center;
+    & h3 {
+      text-decoration: underline;
+      padding: 0.5em 0;
+    }
   }
 
   &__course {
-    header {
-      text-align: center;
-      h3 {
-        text-decoration: underline;
-        padding: 0.5em 0;
-      }
-    }
-
     &__item {
       display: flex;
       flex-flow: row wrap;
@@ -209,16 +205,15 @@ p {
   font-size: 2rem;
 
   &__title {
-    font-size: 1.5em;
+    font-size: 1.25em;
   }
 
   &__list {
-    header {
-      text-align: center;
-      h3 {
-        text-decoration: underline;
-        padding: 0.5em 0;
-      }
+    text-align: center;
+
+    & h3 {
+      text-decoration: underline;
+      padding: 0.5em 0;
     }
 
     &__item {
