✨ adds basic media queries

--- a/compartments/layouts/application.html
+++ b/compartments/layouts/application.html
@@ -10,9 +10,9 @@
   <body>
     <header class="main-header contain section">
       <h1 class="main-header__text">Duc’s Bistro</h1>
-      <p class="main-header__information section">Traditional Vietnamese and Classic French Cuisine • Serving Chinatown Since 1992</p>
+      <p class="main-header__information section"><span>Traditional Vietnamese and Classic French Cuisine</span><span class="hidden--phone hidden--tablet">•</span><span>Serving Chinatown Since 1992</span></p>
       <address class="main-header__address">1188 Maunakea Street Honolulu, Hawaii 96817</address>
-      <p>For reservations please call (808) 531-6325</p>
+      <p class="main-header__phone"><span>For reservations please call</span><span>(808) 531-6325</span></p>
     </header>
     <nav class="section">
       <ul class="navigation">
