--- a/src/compartments/layouts/application.pug
+++ b/src/compartments/layouts/application.pug
@@ -9,9 +9,14 @@ html(lang='en')
   body
     header.main-header.contain.section
       h1.main-header__text Duc’s Bistro
-      p.main-header__information.section Traditional Vietnamese and Classic French Cuisine • Serving Chinatown Since 1992
+      p.main-header__information.section
+        span Traditional Vietnamese and Classic French Cuisine
+        span.hidden--phone.hidden--tablet •
+        span Serving Chinatown Since 1992
       address.main-header__address 1188 Maunakea Street Honolulu, Hawaii 96817
-      p For reservations please call (808) 531-6325
+      p.main-header__phone
+        span For reservations please call
+        span (808) 531-6325
     nav.section
       ul.navigation
         li.navigation__item
