--- a/src/compartments/templates/wine_lists/show.pug
+++ b/src/compartments/templates/wine_lists/show.pug
@@ -129,3 +129,5 @@
         h4.wine__list__item__name {{fields.name}}
         p.wine__list__item__price {{fields.cost}}
       | {{/each}}
+
+  p Corkage fee • 20.00
