📸 updates store front image url

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -224,7 +224,7 @@ p {
   height: 400px;
   width: 100%;
 
-  background: url('https://ducsbistro.com/Ducsbistro/Welcome_files/IMG_4916.jpg');
+  background: url('https://res.cloudinary.com/airship/image/upload/v1492423403/media/restaurant_neon_sign_ie17ku.jpg');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
