adds correct page title fpr main layout

--- a/src/compartments/layouts/application.pug
+++ b/src/compartments/layouts/application.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
   head
     meta(charset='UTF-8')
-    title Airship CMS Project
+    title Duc's Bistro | Traditional Vietnamese and Classic French Cuisine Serving Chinatown Since 1992
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(href='https://fonts.googleapis.com/css?family=Crimson+Text|Lato', rel='stylesheet')
     link(rel='stylesheet', href='/assets/styles/styles.css')
@@ -27,4 +27,4 @@ html(lang='en')
           a(href='/menu/view/main-menu') Menu
         li.navigation__item
           a(href='/wine-lists/view/wine') Wine List
-    |   {{{ template }}}
+    | {{{ template }}}
