--- a/compartments/templates/wine_lists/show.html
+++ b/compartments/templates/wine_lists/show.html
@@ -1,148 +1,1 @@
-
-<div class="wine section contain contain__section" id="wine">
-  <h2 class="wine__title">{{fields.type}}</h2>
-  <article class="wine__list section">
-    <header class="wine__title section">
-      <h3>Champagne & Sparkling Wine</h3>
-    </header>
-    <ul class="section">{{#each related_items.champagne_sparkling_wine}}
-      <li class="wine__list__item">
-        <h4 class="wine__list__item__name">{{fields.name}}</h4>
-        <p class="wine__list__item__price">{{fields.cost}}</p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="wine__list section">
-    <header class="wine__title section">
-      <h3>Chardonnay</h3>
-    </header>
-    <ul class="section">{{#each related_items.chardonnay}}
-      <li class="wine__list__item">
-        <h4 class="wine__list__item__name">{{fields.name}}</h4>
-        <p class="wine__list__item__price">{{fields.cost}}</p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="wine__list section">
-    <header class="wine__title section">
-      <h3>Sauvignon Blanc</h3>
-    </header>
-    <ul class="section">{{#each related_items.sauvignon_blanc}}
-      <li class="wine__list__item">
-        <h4 class="wine__list__item__name">{{fields.name}}</h4>
-        <p class="wine__list__item__price">{{fields.cost}}</p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="wine__list section">
-    <header class="wine__title section">
-      <h3>Riesling</h3>
-    </header>
-    <ul class="section">{{#each related_items.riesling}}
-      <li class="wine__list__item">
-        <h4 class="wine__list__item__name">{{fields.name}}</h4>
-        <p class="wine__list__item__price">{{fields.cost}}</p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="wine__list section">
-    <header class="wine__title section">
-      <h3>Light White</h3>
-    </header>
-    <ul class="section">{{#each related_items.light_white}}
-      <li class="wine__list__item">
-        <h4 class="wine__list__item__name">{{fields.name}}</h4>
-        <p class="wine__list__item__price">{{fields.cost}}</p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="wine__list section">
-    <header class="wine__title section">
-      <h3>Sweet Wine</h3>
-    </header>
-    <ul class="section">{{#each related_items.sweet_wine}}
-      <li class="wine__list__item">
-        <h4 class="wine__list__item__name">{{fields.name}}</h4>
-        <p class="wine__list__item__price">{{fields.cost}}</p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="wine__list section">
-    <header class="wine__title section">
-      <h3>Sake</h3>
-    </header>
-    <ul class="section">{{#each related_items.sake}}
-      <li class="wine__list__item">
-        <h4 class="wine__list__item__name">{{fields.name}}</h4>
-        <p class="wine__list__item__price">{{fields.cost}}</p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="wine__list section">
-    <header class="wine__title section">
-      <h3>Cabernet Sauvignon</h3>
-    </header>
-    <ul class="section">{{#each related_items.cabernet_sauvignon}}
-      <li class="wine__list__item">
-        <h4 class="wine__list__item__name">{{fields.name}}</h4>
-        <p class="wine__list__item__price">{{fields.cost}}</p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="wine__list section">
-    <header class="wine__title section">
-      <h3>Pinot Noir</h3>
-    </header>
-    <ul class="section">{{#each related_items.pinot_noir}}
-      <li class="wine__list__item">
-        <h4 class="wine__list__item__name">{{fields.name}}</h4>
-        <p class="wine__list__item__price">{{fields.cost}}</p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="wine__list section">
-    <header class="wine__title section">
-      <h3>Merlot</h3>
-    </header>
-    <ul class="section">{{#each related_items.merlot}}
-      <li class="wine__list__item">
-        <h4 class="wine__list__item__name">{{fields.name}}</h4>
-        <p class="wine__list__item__price">{{fields.cost}}</p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="wine__list section">
-    <header class="wine__title section">
-      <h3>Zinfadel</h3>
-    </header>
-    <ul class="section">{{#each related_items.zinfadel}}
-      <li class="wine__list__item">
-        <h4 class="wine__list__item__name">{{fields.name}}</h4>
-        <p class="wine__list__item__price">{{fields.cost}}</p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="wine__list section">
-    <header class="wine__title section">
-      <h3>Blends and Other Reds</h3>
-    </header>
-    <ul class="section">{{#each related_items.blend_other_reds}}
-      <li class="wine__list__item">
-        <h4 class="wine__list__item__name">{{fields.name}}</h4>
-        <p class="wine__list__item__price">{{fields.cost}}</p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="wine__list section">
-    <header class="wine__title section">
-      <h3>Fuller Red</h3>
-    </header>
-    <ul class="section">{{#each related_items.fuller_red}}
-      <li class="wine__list__item">
-        <h4 class="wine__list__item__name">{{fields.name}}</h4>
-        <p class="wine__list__item__price">{{fields.cost}}</p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <p>Corkage fee • 20.00</p>
-</div>
+<div class="wine section contain contain__section" id="wine"><h2 class="wine__title">{{fields.type}}</h2><article class="wine__list section"><header class="wine__title section"><h3>Champagne & Sparkling Wine</h3></header><ul class="section">{{#each related_items.champagne_sparkling_wine}}<li class="wine__list__item"><h4 class="wine__list__item__name">{{fields.name}}</h4><p class="wine__list__item__price">{{fields.cost}}</p></li>{{/each}}</ul></article><article class="wine__list section"><header class="wine__title section"><h3>Chardonnay</h3></header><ul class="section">{{#each related_items.chardonnay}}<li class="wine__list__item"><h4 class="wine__list__item__name">{{fields.name}}</h4><p class="wine__list__item__price">{{fields.cost}}</p></li>{{/each}}</ul></article><article class="wine__list section"><header class="wine__title section"><h3>Sauvignon Blanc</h3></header><ul class="section">{{#each related_items.sauvignon_blanc}}<li class="wine__list__item"><h4 class="wine__list__item__name">{{fields.name}}</h4><p class="wine__list__item__price">{{fields.cost}}</p></li>{{/each}}</ul></article><article class="wine__list section"><header class="wine__title section"><h3>Riesling</h3></header><ul class="section">{{#each related_items.riesling}}<li class="wine__list__item"><h4 class="wine__list__item__name">{{fields.name}}</h4><p class="wine__list__item__price">{{fields.cost}}</p></li>{{/each}}</ul></article><article class="wine__list section"><header class="wine__title section"><h3>Light White</h3></header><ul class="section">{{#each related_items.light_white}}<li class="wine__list__item"><h4 class="wine__list__item__name">{{fields.name}}</h4><p class="wine__list__item__price">{{fields.cost}}</p></li>{{/each}}</ul></article><article class="wine__list section"><header class="wine__title section"><h3>Sweet Wine</h3></header><ul class="section">{{#each related_items.sweet_wine}}<li class="wine__list__item"><h4 class="wine__list__item__name">{{fields.name}}</h4><p class="wine__list__item__price">{{fields.cost}}</p></li>{{/each}}</ul></article><article class="wine__list section"><header class="wine__title section"><h3>Sake</h3></header><ul class="section">{{#each related_items.sake}}<li class="wine__list__item"><h4 class="wine__list__item__name">{{fields.name}}</h4><p class="wine__list__item__price">{{fields.cost}}</p></li>{{/each}}</ul></article><article class="wine__list section"><header class="wine__title section"><h3>Cabernet Sauvignon</h3></header><ul class="section">{{#each related_items.cabernet_sauvignon}}<li class="wine__list__item"><h4 class="wine__list__item__name">{{fields.name}}</h4><p class="wine__list__item__price">{{fields.cost}}</p></li>{{/each}}</ul></article><article class="wine__list section"><header class="wine__title section"><h3>Pinot Noir</h3></header><ul class="section">{{#each related_items.pinot_noir}}<li class="wine__list__item"><h4 class="wine__list__item__name">{{fields.name}}</h4><p class="wine__list__item__price">{{fields.cost}}</p></li>{{/each}}</ul></article><article class="wine__list section"><header class="wine__title section"><h3>Merlot</h3></header><ul class="section">{{#each related_items.merlot}}<li class="wine__list__item"><h4 class="wine__list__item__name">{{fields.name}}</h4><p class="wine__list__item__price">{{fields.cost}}</p></li>{{/each}}</ul></article><article class="wine__list section"><header class="wine__title section"><h3>Zinfadel</h3></header><ul class="section">{{#each related_items.zinfadel}}<li class="wine__list__item"><h4 class="wine__list__item__name">{{fields.name}}</h4><p class="wine__list__item__price">{{fields.cost}}</p></li>{{/each}}</ul></article><article class="wine__list section"><header class="wine__title section"><h3>Blends and Other Reds</h3></header><ul class="section">{{#each related_items.blend_other_reds}}<li class="wine__list__item"><h4 class="wine__list__item__name">{{fields.name}}</h4><p class="wine__list__item__price">{{fields.cost}}</p></li>{{/each}}</ul></article><article class="wine__list section"><header class="wine__title section"><h3>Fuller Red</h3></header><ul class="section">{{#each related_items.fuller_red}}<li class="wine__list__item"><h4 class="wine__list__item__name">{{fields.name}}</h4><p class="wine__list__item__price">{{fields.cost}}</p></li>{{/each}}</ul></article><p>Corkage fee • 20.00</p></div>
